# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  git
resources/: attribution.txt  triangle.frag
resources/shaders/: image.vert  sprite.frag  sprite.vert  text.frag  text.vert  triangle.vert
src/: camera.cpp  camera.h  fs.cpp  fs.h  main.cpp  mesh.cpp  mesh.h  renderer.h  resourceLoader.cpp  resourceLoader.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h  utils.cpp  utils.h  window.h
